fix: add letter spacing, h4→h3 on index

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -140,6 +140,7 @@ h6 {
   font-weight: 500;
   line-height: 1.3em;
   margin: 30px 0 20px 0;
+  letter-spacing: 1px;
 }
 
 h1 {
